# Constant_Time-Parallel_Shuffling

./: CMakeLists.txt  MakeFile  Makefile  README.md  ciao.c  library.h  main.c
constant-weight_words/: constantWeightWord.c  constantWeightWord.h
djb_code/: djb_code.py  insertionseries_cww.py  only_cww.py  only_insertionseries.py
insertion_series/: insertionSeries.c  insertionSeries.h
slide_source/: beamercolorthemepolimi.sty  beamerouterthemepolimi.sty  main.tex
slide_source/CTps/: cww.tex  insertion_series.tex  introduction.tex
utility/: bitonicSort.c  bitonicSort.h  intList.c  intList.h  pairList.c  pairList.h  safeRealloc.c  safeRealloc.h  tuple.c  tuple.h
